# searchingbot

./: .gitignore  README.md  pyproject.toml
core-api/: pyproject.toml
core-api/scripts/: setup_test_data.py  test_chat_api.py
core-api/src/app/: main.py
core-api/src/app/api/: api.py
core-api/src/app/api/v1/endpoints/: chat.py
core-api/src/app/core/: config.py
core-api/src/app/db/: mongodb.py
core-api/src/app/middleware/: security.py
core-api/src/app/models/: mall.py  scraping.py
core-api/src/app/services/scraper/: fallback.py  rust_client.py  service.py
scraper-engine/: Cargo.toml
scraper-engine/src/: main.rs
src/searchingbot/: __init__.py
